--- a/index.html
+++ b/index.html
@@ -2,17 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Angela's Personal Site</title>
+    <title>Abhishek's Personal Site</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
 
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/angela.png" alt="angela profile picture"></td>
-        <td><h1>Angela Yu</h1>
-        <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
-        <p>I am an iOS and Web Developer. I ❤️ coffee and brew my own beers.</p></td>
+        <td><img src="images/Abhishek.jpeg" alt="abhishek profile picture"></td>
+        <td><h1>Abhishek Kumar</h1>
+        <p><em>EDUCATION <strong><p>Silicon Institute of Technology<br>B.Tech in Electronics and Communication Engineering | 2019-23</p></strong>.</em></p>
+        <p>I am a tech enthusiast with a focus
+on Development. I am seeking
+opportunities to work in an
+organization which provides me with
+ample opportunities to enhance my
+skills and knowledge along with
+contributing to the growth of the
+organization
+</p></td>
       </tr>
     </table>
     <hr>
