--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <tr>
         <td><img src="images/Abhishek.jpeg" alt="abhishek profile picture"></td>
         <td><h1>Abhishek Kumar</h1>
-        <p><em>EDUCATION <strong><p>Silicon Institute of Technology<br>B.Tech in Electronics and Communication Engineering | 2019-23</p></strong>.</em></p>
+          <p><em> <strong><p>EDUCATION </p><p>Silicon Institute of Technology<br>B.Tech in Electronics and Communication Engineering | 2019-23</p></strong>.</em></p>
         <p>I am a tech enthusiast with a focus
 on Development. I am seeking
 opportunities to work in an
