--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@ organization
       </tr>
     </table>
     <hr>
-    <h3>Books and Teaching</h3>
+    <h3>Activities</h3>
     <ul>
-      <li>The Complete iOS App Development Bootcamp</li>
-      <li>The Complete Web Development Bootcamp</li>
+      <li><p><strong>Athletics:</strong></p>
+        <p>2nd Position in 800mtr race</p>
+        <p>Runner's up in Interschool Cup Football Tournament</p>
+</li>
+      <li><p><strong>Societies:</strong></p></li>
+        <p>Entrepreneurship Development Cell</p>
     </ul>
     <hr>
     <h3>Work Experience</h3>
@@ -40,16 +44,8 @@ organization
       </thead>
       <tbody>
         <tr>
-          <td>2009-2010</td>
-          <td>Researcher at The Institute of Cognitive Neurosciences</td>
-        </tr>
-        <tr>
-          <td>2010-2013</td>
-          <td>Lead Developer at Tempo App</td>
-        </tr>
-        <tr>
-          <td>2013-2015</td>
-          <td>Clinical Doctor at the National Health Service</td>
+          <td>2021 Jan-April</td>
+          <td>Product Manager Internship at Starttup Tyme</td>
         </tr>
       </tbody>
     </table>
@@ -57,19 +53,19 @@ organization
     <h3>Skills</h3>
     <table cellspacing="10">
       <tr>
-        <td>iOS Development</td>
+        <td>C++</td>
         <td>⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
       <tr>
-        <td>Web Development</td>
+        <td>HTML, CSS</td>
         <td>⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
        <tr>
-        <td>Programming</td>
+        <td>Python Programming</td>
         <td>⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
       <tr>
-        <td>Photography</td>
+        <td>WordPress</td>
         <td>⭐️⭐️</td>
       </tr>
     </table>
