--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/Abhishek.jpeg" alt="abhishek profile picture"></td>
+        <td><img src="images/Abhishek.jpg" alt="abhishek profile picture"></td>
         <td><h1>Abhishek Kumar</h1>
           <p><em> <strong><p>EDUCATION </p><p>Silicon Institute of Technology<br>B.Tech in Electronics and Communication Engineering | 2019-23</p></strong>.</em></p>
         <p>I am a tech enthusiast with a focus
