--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ organization
       <tbody>
         <tr>
           <td>2021 Jan-April</td>
-          <td>Product Manager Internship at Starttup Tyme</td>
+          <td>Product Manager Internship at Startup Tyme</td>
         </tr>
       </tbody>
     </table>
