--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ organization
       </tr>
        <tr>
         <td>Python Programming</td>
-        <td>⭐️⭐️⭐️⭐️⭐️</td>
+        <td>⭐️⭐️⭐️⭐️</td>
       </tr>
       <tr>
-        <td>WordPress</td>
-        <td>⭐️⭐️</td>
+        <td>OOPS</td>
+        <td>⭐️⭐️⭐️⭐️</td>
       </tr>
     </table>
     <hr>
