--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
         <td><h1>Abhishek Kumar</h1>
           <p><em> <strong><p>EDUCATION </p><p>Silicon Institute of Technology<br>B.Tech in Electronics and Communication Engineering | 2019-23</p></strong>.</em></p>
         <p>I am a tech enthusiast with a focus
-on Development.
+on Development.I am seeking
+opportunities to work in an
+organization which provides me with
+ample opportunities to enhance my
+skills and knowledge along with
+contributing to the growth of the
+organization
 </p></td>
       </tr>
     </table>
     <hr>
-    <h3>Activities</h3>
+    <h1>Activities</h1>
     <ul>
       <li><p><strong>Athletics:</strong></p>
         <p>2nd Position in 800mtr race</p>
