--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
       <tr>
         <td><img src="images/Abhishek.jpg" alt="abhishek profile picture"></td>
         <td><h1>Abhishek Kumar</h1>
-          <p><em> <strong><p>EDUCATION </p><p>Silicon Institute of Technology<br>B.Tech in Electronics and Communication Engineering | 2019-23</p></strong>.</em></p>
+          <p><em> <strong><p>EDUCATION </p><p>Silicon Institute of Technology<br>B.Tech in Electronics and Communication Engineering | 2019-23</p></strong></em></p>
         <p>I am a tech enthusiast with a focus
 on Development.I am seeking
 opportunities to work in an
 organization which provides me with
 ample opportunities to enhance my
-skills and knowledge along with
-contributing to the growth of the
-organization
+skills and knowledge.
 </p></td>
       </tr>
     </table>
