--- a/index.html
+++ b/index.html
@@ -24,51 +24,51 @@ skills and knowledge.
     <hr>
     <h1>Activities</h1>
     <ul>
-      <li><p><strong>Athletics:</strong></p>
-        <p>2nd Position in 800mtr race</p>
-        <p>Runner's up in Interschool Cup Football Tournament</p>
+      <li><p><strong><h2>Athletics:</h2></strong></p>
+        <h3><p>2nd Position in 800mtr race</p>
+          <p>Runner's up in Interschool Cup Football Tournament</p></h3>
 </li>
-      <li><p><strong>Societies:</strong></p></li>
-        <p>Entrepreneurship Development Cell</p>
+      <li><p><strong><h2>Societies:</h2></strong></p></li>
+      <h3><p>Entrepreneurship Development Cell</p></h3>
     </ul>
     <hr>
-    <h3>Work Experience</h3>
+    <h1>Work Experience</h1>
     <table cellspacing="10">
       <thead>
         <tr>
-          <th>Dates</th>
-          <th>Work</th>
+          <th><h2>Dates</h2></th>
+          <th><h2>Work</h2></th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>2021 Jan-April</td>
-          <td>Product Manager Internship at Startup Tyme</td>
+          <td><h3>2021 Jan-April</h3></td>
+          <td><h3>Product Manager Internship at Startup Tyme</h3></td>
         </tr>
       </tbody>
     </table>
     <hr>
-    <h3>Skills</h3>
+    <h1>Skills</h1>
     <table cellspacing="10">
       <tr>
-        <td>C++</td>
+        <td><h3>C++</h3></td>
         <td>⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
       <tr>
-        <td>HTML, CSS</td>
+        <td><h3>HTML, CSS</h3></td>
         <td>⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
        <tr>
-        <td>Python Programming</td>
+         <td><h3>Python Programming</h3></td>
         <td>⭐️⭐️⭐️⭐️</td>
       </tr>
       <tr>
-        <td>OOPS</td>
+        <td><h3>OOPS</h3></td>
         <td>⭐️⭐️⭐️⭐️</td>
       </tr>
     </table>
     <hr>
-    <a href="hobbies.html">My Hobbies</a>
-    <a href="contact-me.html">Contact Me</a>
+    <a href="hobbies.html"><h3>My Hobbies</h3></a>
+    <a href="contact-me.html"><h3>Contact Me</h3></a>
   </body>
 </html>
